[gd_scene load_steps=5 format=2]

[ext_resource path="res://main_panel.tres" type="StyleBox" id=1]
[ext_resource path="res://fonts/plex_mono_28.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/plex_mono_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://SidePanel.gd" type="Script" id=4]

[node name="SidePanel" type="PanelContainer"]
margin_left = 856.0
margin_right = 984.0
margin_bottom = 560.0
rect_min_size = Vector2( 320, 0 )
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 320.0
margin_bottom = 560.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = -15

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 575.0
custom_constants/separation = 20

[node name="Title" type="VBoxContainer" parent="MarginContainer/Rows"]
margin_right = 300.0
margin_bottom = 63.0
size_flags_horizontal = 3

[node name="InfoLabel" type="Label" parent="MarginContainer/Rows/Title"]
margin_right = 300.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.780392, 0.780392, 0.780392, 1 )
custom_fonts/font = ExtResource( 3 )
text = "You are in..."

[node name="RoomNameLabel" type="Label" parent="MarginContainer/Rows/Title"]
margin_top = 26.0
margin_right = 300.0
margin_bottom = 63.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.980392, 1, 0.580392, 1 )
custom_fonts/font = ExtResource( 2 )
text = "A Room"
autowrap = true

[node name="DescriptionLabel" type="Label" parent="MarginContainer/Rows"]
margin_top = 83.0
margin_right = 300.0
margin_bottom = 130.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "This is where room desciription goes"
autowrap = true

[node name="List" type="VBoxContainer" parent="MarginContainer/Rows"]
margin_top = 150.0
margin_right = 300.0
margin_bottom = 473.0
size_flags_vertical = 3

[node name="ItemLabel" type="RichTextLabel" parent="MarginContainer/Rows/List"]
margin_right = 300.0
margin_bottom = 23.0
custom_colors/default_color = Color( 0.580392, 0.72549, 1, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "Items: Option"
text = "Items: Option"
fit_content_height = true

[node name="NpcLabel" type="RichTextLabel" parent="MarginContainer/Rows/List"]
margin_top = 27.0
margin_right = 300.0
margin_bottom = 50.0
custom_colors/default_color = Color( 1, 0.603922, 0.580392, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "Npcs: Option"
text = "Npcs: Option"
fit_content_height = true

[node name="ExitLabel" type="RichTextLabel" parent="MarginContainer/Rows/List"]
margin_top = 54.0
margin_right = 300.0
margin_bottom = 77.0
custom_colors/default_color = Color( 0.980392, 1, 0.580392, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "Exits: Option"
text = "Exits: Option"
fit_content_height = true

[node name="Label" type="Label" parent="MarginContainer/Rows"]
margin_top = 493.0
margin_right = 300.0
margin_bottom = 565.0
custom_colors/font_color = Color( 0.980392, 1, 0.580392, 1 )
custom_fonts/font = ExtResource( 3 )
text = "You can type 'help' to see all possible commands
"
autowrap = true
